# AaDS-first-lab

./: AaDS-first-lab.sln  CMakeLists.txt
AaDS-first-lab/: AaDS-first-lab.vcxproj  AaDS-first-lab.vcxproj.filters
console/: console_app.cc
include/functions/: vectors.h
